package pt.isep.psoft.alsafe.maintenancemanagement.domain;

public enum MaintenanceStatus {

    PLANNED,

    IN_PROGRESS,

    COMPLETED,

    CANCELED
}